--- a/example_data/simple_config.json
+++ b/example_data/simple_config.json
@@ -1,4 +1,4 @@
 {
-  "directories": [ "/opt/code/tap-text/example_data/simple" ],
+  "directories": [ "./example_data/simple" ],
   "file_format": "jsonl"
 }
