--- a/example_data/csv_config.json
+++ b/example_data/csv_config.json
@@ -1,5 +1,5 @@
 {
-  "directories": [ "/opt/code/tap-text/example_data/csv/items" ],
+  "directories": [ "./example_data/csv/items" ],
   "rec_hash_keys": true,
   "file_format": "csv"
 }
