--- a/example_data/json_config.json
+++ b/example_data/json_config.json
@@ -1,5 +1,5 @@
 {
-  "directories": [ "/opt/code/tap-text/example_data/jsonl/table_0" ],
+  "directories": [ "./example_data/jsonl/table_0" ],
   "rec_hash_keys": true,
   "file_format": "jsonl"
 }
